tests updated